{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 185,
  "lineage": "43ccf357-7faa-f1df-12be-509d35b01b83",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f4cc2fdb5e19537",
            "associate_with_private_ip": "10.22.0.10",
            "association_id": "eipassoc-033ce76bbe1940a1d",
            "domain": "vpc",
            "id": "eipalloc-00f4cc2fdb5e19537",
            "instance": "i-0b0b538d64ad92dee",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cf6a7aa82d5b2998",
            "private_dns": "ip-10-22-0-10.ec2.internal",
            "private_ip": "10.22.0.10",
            "public_dns": "ec2-3-209-202-110.compute-1.amazonaws.com",
            "public_ip": "3.209.202.110",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_network_interface.web_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:979490057625:instance/i-0b0b538d64ad92dee",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0b538d64ad92dee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec21",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0cf6a7aa82d5b2998"
              }
            ],
            "primary_network_interface_id": "eni-0cf6a7aa82d5b2998",
            "private_dns": "ip-10-22-0-10.ec2.internal",
            "private_ip": "10.22.0.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0701b7124a491d789",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa066415c224f2f2",
            "tags": {
              "Name": "server"
            },
            "tags_all": {
              "Name": "server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0482c8dec2abe0e70"
            ]
          },
          "dependencies": [
            "aws_network_interface.web_server",
            "aws_security_group.ssh-allowed",
            "aws_subnet.onesubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:internet-gateway/igw-0202eb688b1212cc0",
            "id": "igw-0202eb688b1212cc0",
            "owner_id": "979490057625",
            "vpc_id": "vpc-08b42425d194eca9a"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:network-interface/eni-0cf6a7aa82d5b2998",
            "attachment": [
              {
                "attachment_id": "eni-attach-0d4676763c0e3cb4d",
                "device_index": 0,
                "instance": "i-0b0b538d64ad92dee"
              }
            ],
            "id": "eni-0cf6a7aa82d5b2998",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "12:e5:1f:95:10:47",
            "owner_id": "979490057625",
            "private_ip": "10.22.0.10",
            "private_ips": [
              "10.22.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0482c8dec2abe0e70"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa066415c224f2f2"
          },
          "dependencies": [
            "aws_subnet.onesubnets",
            "aws_vpc.Main",
            "aws_security_group.ssh-allowed"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "oneRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:route-table/rtb-0e8c9e9f16feef079",
            "id": "rtb-0e8c9e9f16feef079",
            "owner_id": "979490057625",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0202eb688b1212cc0",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0202eb688b1212cc0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b42425d194eca9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "secRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:route-table/rtb-0507e5df2caa6d921",
            "id": "rtb-0507e5df2caa6d921",
            "owner_id": "979490057625",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0202eb688b1212cc0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b42425d194eca9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "oneRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0079e0ca30753731c",
            "route_table_id": "rtb-0e8c9e9f16feef079",
            "subnet_id": "subnet-0aa066415c224f2f2"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.oneRT",
            "aws_subnet.onesubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "secRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e086f348716fc070",
            "route_table_id": "rtb-0507e5df2caa6d921",
            "subnet_id": "subnet-0eca56b89c7ffd6ef"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.secRT",
            "aws_subnet.secsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:security-group/sg-0482c8dec2abe0e70",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0482c8dec2abe0e70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220120150522110600000001",
            "name_prefix": "terraform-",
            "owner_id": "979490057625",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b42425d194eca9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "onesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:subnet/subnet-0aa066415c224f2f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.22.0.0/24",
            "id": "subnet-0aa066415c224f2f2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979490057625",
            "tags": {
              "Name": "sub1L"
            },
            "tags_all": {
              "Name": "sub1L"
            },
            "vpc_id": "vpc-08b42425d194eca9a"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:subnet/subnet-0eca56b89c7ffd6ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.22.1.0/24",
            "id": "subnet-0eca56b89c7ffd6ef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979490057625",
            "tags": {
              "Name": "sub2L"
            },
            "tags_all": {
              "Name": "sub2L"
            },
            "vpc_id": "vpc-08b42425d194eca9a"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:vpc/vpc-08b42425d194eca9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.22.0.0/16",
            "default_network_acl_id": "acl-0e2e3c6f90ed89d2d",
            "default_route_table_id": "rtb-0f4f3c06c37cdef52",
            "default_security_group_id": "sg-0fe8c2cae7db9e63d",
            "dhcp_options_id": "dopt-07ef62f1f880c50d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08b42425d194eca9a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f4f3c06c37cdef52",
            "owner_id": "979490057625",
            "tags": {
              "Name": "VPC_L"
            },
            "tags_all": {
              "Name": "VPC_L"
            }
          }
        }
      ]
    }
  ]
}